[tool.poetry]
name = "pattern-generator"
version = "0.1.0"
description = ""
authors = ["teruteruzeus <teruteruzeus@gmai.com>"]
readme = "README.md"
packages = [{include = "pattern_generator"}]

[tool.poetry.dependencies]
python = "^3.11"
flet = {extras = ["all"], version = "^0.27.6"}
matplotlib = "^3.10.1"
numpy = "^2.2.5"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
